--- a/style.css
+++ b/style.css
@@ -5,28 +5,100 @@ header {
     background-color: white;
 }
 
+.video-preview {
+    width: 30%;
+    background-color: #f0f0f0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 58%;
+    right: 5%; 
+    transform: translateY(-50%);
+}
+
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 90%;
+}
+#content-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 main {
-    background-color: white;
+    width: 65%; 
+    padding: 40px;
+    box-sizing: border-box;
 }
 
 footer {
-    background-color: white;
     position: absolute;
     bottom: 0;
     width: 100%;
     text-align: center;
+  background-color: #80B3FF; 
+  color: white; 
+  padding: 40px 0;
+  text-align: center;
+  height: 50px;
+  margin-bottom: 0px;
 }
 
 .nav-link {
-    color: black;
+    color: white;
     transition: 0.3s;
     text-decoration: none;  
+	 display: inline-block;
+  padding: 15px 25px;
+  border-radius: 50%; /* Makes it round */
+  background-color: #687EFF; 
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  margin: 0 10px; /* Adjust the spacing between links */
+font-family: 'Montserrat', sans-serif;
+    border-bottom: 2px solid #000; 
+    padding-bottom: 10px; 
 }
 
 .nav-link:hover {
     color: aqua;
 }
 
+blockquote {
+    margin: 0;
+    padding: 20px;
+    background-color: #B6FFFA;
+    border-left: 5px solid #80B3FF;
+	font-family: 'Montserrat', sans-serif;
+	color: #687EFF;
+}
+
+blockquote p {
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+blockquote footer {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #888;
+}
 
 
 
