--- a/style.css
+++ b/style.css
@@ -43,14 +43,14 @@ homepage text
     justify-content: space-between;
 }
 main {
-    width: 65%; /* Adjust width based on your layout */
+    width: 65%;
     padding: 40px;
     box-sizing: border-box;
 		font-family: 'Montserrat', sans-serif;
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     text-align: center;
@@ -58,7 +58,7 @@ footer {
   color: white; 
   padding: 40px 0;
   text-align: center;
-  height: 50px;
+  height: 40px;
   margin-bottom: 0px;
 }
 
@@ -69,13 +69,13 @@ footer {
     text-decoration: none;  
 	 display: inline-block;
   padding: 15px 25px;
-  border-radius: 50%; /* Makes it round */
+  border-radius: 50%;
   background-color: #687EFF; 
   color: white;
   text-decoration: none;
   text-align: center;
   font-size: 16px;
-  margin: 0 10px; /* Adjust the spacing between links */
+  margin: 0 10px; 
 font-family: 'Montserrat', sans-serif;
     border-bottom: 2px solid #000; 
     padding-bottom: 10px; 
@@ -229,7 +229,7 @@ services Page
     }
 
 .service img {
-      width: 200px; /* Adjust the size of the images */
+      width: 200px;
       height: auto;
       margin-bottom: 20px;
       margin-right: 20px;
@@ -242,7 +242,7 @@ services Page
 
 
 /* Desktop Viewport */
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 521px) {
 
 /* Page */
 
@@ -343,7 +343,7 @@ main {
 
 
 /* Mobile Viewport */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 520px) {
 
     /* Page */
 
@@ -353,6 +353,7 @@ main {
     
     body {
         padding: 0;
+        padding-bottom: 70px;
         margin: 0;
     }
 
@@ -424,10 +425,9 @@ main {
         text-align: left;
         padding: 25px;
         float: right;
-        background-color: white;
-        z-index: 5; /* Set a higher z-index */
+        z-index: 5;
         position: absolute;
-        top: 60px; /* Adjust based on the height of your header */
+        top: 60px;
         right: 0;
         background-color: white;
         border-width: 5px;
